[package]
name = "finance-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
ratatui = "0.29"     # TUI framework — widgets, layout, render loop
crossterm = "0.28"   # cross-platform terminal I/O (raw mode, key events, alt screen)
